master

1.0.9
- Zixaphir
  Fix image hover bugs.

1.0.8
- Zixaphir
  Bugfixes
  - Icon Positions
  - Recursive Filtering breaking _everything_

1.0.7
- Zixaphir
  Floating Post Form option.

1.0.6
- Zixaphir
  Style Option removed
  - Styles and Themes are required.
  Navlinks are now colored as icons.
  Enabled Floating QR Post Form Option.
  RedUX and Obsidianchan Theme Tweaks
  ExScript Support
  Option to auto-position icons rather than depend on my spotty manual positioning
- Mayhem
  Added possibility to display unix timestamps with File Info Formatting.

1.0.5
- Zixaphir
  Checkbox alignments should be better now
  Reply Spacing set to none now attempts to remove double-borders
  Fix ExLinks icon broken by 1.0.4 release.

1.0.4
- noface
  Archivelinks improvements
- Zixaphir
  Fix 4sight
  Color navlinks like icons
  Fix incorrect icons for dark and light themes.
  Updater post count now updates on window focus like it does on window scroll.
  Better linkifier.
  Fix logo reflections on Chrome.
  Positioned the OP menu button like reply menu buttons (thread hider will not be positioned due to syntax issues with hover opacity)
  Theme importer fixes for 4chan SS
  Darker prettyPrint background for code tags on dark themes
  .highlight and :target fixes

1.0.0 - 1.0.3
- Zixaphir
  Fix 4chan Pass support.
  Icon themes.
  Fixed an issue where mascots were not saving.
  New options for navigation and pagination alignment
  Brighter icons
  Logo reflections
  Recategorized Options
  Smaller minimal sizes
  Redo Gasai Yuno 2 mascot
  Redo Konjiki no Yami (Golden Darkness) Mascot
  Better Embedder
- noface
  Archives now populate a submenu just like the quicklinks for the Filter.

0.19.0 (Version 1.0.0rc1)
- noface
  Updater should now check until own post is found.
  "Don't expand spoilers when using ImageExpand" should now work as expected and gets a new option.
  postContainer now adds a class 'hidden' when the stub is hidden.
- Zixaphir