@@ -1,4 +1,6 @@
 master
+- noface
+  Added keybind to toggle the hide status of the QR.
 
 1.0.9
 - Zixaphir
